# clap-mml-play-server

./: .gitignore  AGENTS.md  Cargo.toml  README.ja.md  README.md  _config.yml  config.toml  pass1_tokens.json  pass2_ast.json  pass3_events.json
core-lib/src/: host.rs  lib.rs  midi.rs  midi_tests.rs  pipeline.rs  pipeline_dirs.rs  pipeline_render.rs  pipeline_test_support.rs  pipeline_tests.rs  render.rs
issue-notes/: 1.md  19.md  25.md  27.md  37.md  41.md  44.md  45.md  55.md  62.md  64.md  66.md  68.md  69.md  70.md  71.md  72.md  73.md  77.md  86.md  87.md  91.md  94.md  96.md  97.md  98.md
render-server/: Cargo.toml
render-server/src/: http.rs  main.rs
render-server/src/http/: tests.rs
src/: config.rs  daw.rs  history.rs  history_tests.rs  main.rs  midi.rs  patch_list.rs  pipeline.rs  pipeline_tests.rs  server.rs  tui.rs  ui_utils.rs
src/daw/: input.rs  mod.rs  playback.rs  save.rs  tests.rs  types.rs  ui.rs
src/tui/: input.rs  mod.rs  ui.rs
