[package]
name = "clap-mml-render-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clap-mml-render-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cmrt-runtime = { git = "https://github.com/cat2151/clap-mml-render-tui.git", package = "cmrt-runtime" }
cmrt-core = { path = "../core-lib" }
ctrlc = "3"
